--- a/_src/assets/scss/components/_reasons-section.scss
+++ b/_src/assets/scss/components/_reasons-section.scss
@@ -1,7 +1,7 @@
 // reasons section
 
 .reasons_section {
-  padding: 6% 11%;
+  padding: 6% 11% 10% 11%;
   background-color: $light-blue;
 }
 
