--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -8,14 +8,6 @@
   font-family: $font-main;
 }
 
-.page_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-// main
-
 // tips section
 
 .tips_section {
@@ -23,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: left;
 }
 
 .tips_title {
